<resources>
    <string name="app_id">992366210899636</string>
    <string name="dangky">Đăng ký</string>
    <string name="thongbaoloidangky">Bạn chưa nhập </string>
    <string name="thongbaonhaplaimatkhau">Vui lòng nhập giống mật khẩu ở trên </string>
    <string name="thongbaodangkythanhcong">Tạo tài khoản thành công </string>
    <string name="thongbaoguimailthanhcong">Gửi email thành công !</string>
    <string name="angi">Ăn gì ?</string>
    <string name="blogs">Blogs </string>
    <string name="datmon">Đặt món </string>
    <string name="capnhatwifi">Cập nhật wifi</string>
    <string name="nhaptenwifi">Nhập tên wifi</string>
    <string name="nhapmatkhauwifi">Nhập mật khẩu wifi</string>
    <string name="dongy">Đồng ý</string>
    <string name="loithemwifi">Vui lòng nhập đầy đủ thông tin wifi</string>
    <string name="themthanhcong">Thêm thành công ! </string>
    <string name="thucdon">Thực đơn</string>
    <string name="tenquanan">Tên quán ăn</string>
    <string name="khonggiaohang">Không giao hàng</string>
    <string name="tenmon">Tên món</string>
    <string name="giatien">Giá tiền</string>
    <string name="luuquanan">Lưu quán ăn</string>
    <string name="themthucdon">Thêm thực đơn</string>

    <string name="app_name">MotelsApp</string>
    <string name="tencongty">Tuancoder.vn</string>
    <string name="dangtai">Đang tải</string>
    <string name="phienban">Phiên bản</string>
    <string name="email">Email đăng nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="hoac">Hoặc</string>
    <string name="dangnhapfacebook">Login with Facebook</string>
    <string name="dangnhapbanggoogle">Phone</string>
    <string name="quenmatkhau">Quên mật khẩu</string>
    <string name="dangkymoi">"<u> Đăng ký </u>"</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="signed_out" />
    <string name="vietsdt">Write phone number here...</string>
    <string name="vietmacode">Write verification code here...</string>
    <string name="kiemchung">Verify</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="emaildk">Email đăng ký</string>
    <string name="banvuilongdienemail">Bạn vui lòng nhập email</string>
    <string name="laimatkhaudung">Bạn vui lòng nhập mật khẩu</string>
    <string name="banvuilongnhapdungmatkhau">Bạn vui lòng nhập đúng mật khẩu</string>
    <string name="dangkythanhcong">Đăng ký thành công! </string>
    <string name="dangxuly">Đang xử lý </string>
    <string name="khoiphucmatkhau">Khôi phục mật khẩu tài khoản đăng nhập</string>
    <string name="chuoikhoiphucmatkhau">Điền email để lấy lại mật khẩu</string>
    <string name="guimail">Gửi</string>
    <string name="chuoithanhvien">Bạn không phải là thành viên?</string>
    <string name="thongbaoemailkhonghople">Email không hợp lệ!</string>
    <string name="guiemailthanhcong">Gửi email thành công!</string>
    <string name="odau">Ở đâu</string>
    <string name="lamgi">Phòng</string>
    <string name="moinhat">Mới nhất</string>
    <string name="danhmuc">Danh mục</string>
    <string name="khuvuc">Thái Nguyên</string>
    <string name="gantoi">Gần tôi</string>
    <string name="giaohang">Giao hàng</string>
    <string name="gameandfun">Game and Fun</string>
    <string name="danhgia">Đánh giá</string>
    <string name="blog">Blogs</string>
    <string name="topmember">Top thành viên</string>
    <string name="datphong">Đặt phòng</string>
    <string name="taianh">Tải ảnh</string>
    <string name="luulai">Lưu lại</string>
    <string name="binhluan">Bình luận</string>
    <string name="checkin">Check in</string>
    <string name="chiase">Chia sẻ</string>
    <string name="dangmocua">Đang mở cửa</string>
    <string name="dadongcua">Đã đóng cửa</string>
    <string name="dang">Đăng</string>
    <string name="thongbaodangnhapthatbai">Đăng nhập thất bại!</string>
    <string name="tenphongtro">Tên phòng trọ</string>
    <string name="giatoida">Giá tối đa</string>
    <string name="giatoithieu">Giá tối thiểu</string>
    <string name="khongdatphong">Không đặt phòng</string>
    <string name="giomocua">Giờ mở cửa</string>
    <string name="giodongcua">Giờ đóng cửa</string>
    <string name="luuphongtro">Lưu phòng trọ</string>
    <string name="chinhanh">Chi nhánh</string>
    <string name="chitietdatphong">Chi tiết xin liên hệ:</string>

</resources>
