<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.PhoneLoginActivity">

    <EditText
        android:id="@+id/phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/size17dp"
        android:layout_marginEnd="@dimen/size17dp"
        android:layout_marginTop="@dimen/size180dp"
        android:background="@color/trang"
        android:padding="@dimen/size8dp"
        android:hint="@string/vietsdt"
        android:textAllCaps="false"
        android:textSize="@dimen/size15sp"
        android:drawableStart="@mipmap/phone"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@mipmap/phone"
        android:textColor="@color/mauden"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/verification_code_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/size17dp"
        android:layout_marginEnd="@dimen/size17dp"
        android:layout_marginTop="@dimen/size4dp"
        android:background="@color/trang"
        android:layout_below="@id/phone_number_input"
        android:padding="@dimen/size5dp"
        android:hint="@string/vietmacode"
        android:textAllCaps="false"
        android:textSize="@dimen/size15sp"
        android:drawableStart="@drawable/password"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@mipmap/phone"
        android:textColor="@color/mauden"
        android:visibility="invisible"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/send_ver_code_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Send Verification Code"
        android:layout_below="@id/verification_code_input"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/size17dp"
        android:layout_marginEnd="@dimen/size17dp"
        android:layout_marginTop="@dimen/size1dp"
        android:background="@color/nennhat"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/size19sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/verify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kiemchung"
        android:layout_below="@id/send_ver_code_button"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/size17dp"
        android:layout_marginEnd="@dimen/size17dp"
        android:layout_marginTop="@dimen/size1dp"
        android:background="@color/nennhat"
        android:textColor="@android:color/background_light"
        android:textSize="@dimen/size19sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="invisible"
        android:gravity="center_horizontal" />

</RelativeLayout>